--- a/tape_interface/README
+++ b/tape_interface/README
@@ -1,1 +1,1 @@
-To use mitmproxy we need to install the certificate in the ssl directory on the browser we are using.
+Module to interface to an Oracle SL150 Tape Library
